training script copied

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -1,22 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "f3a8d281",
-   "metadata": {},
-   "source": [
-    "https://medium.com/swlh/emotion-detection-using-pytorch-4f6fbfd14b2e"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f425a082",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "ebe3b4eb",
@@ -28,9 +12,9 @@
     "root = os.getcwd()\n",
     "# Generate image snippets\n",
     "def snippet(video_clip,root):\n",
-    "    if not os.path.exists(\"Out\"):\n",
-    "        os.mkdir(\"Out\")\n",
-    "    pathOut = root + \"\\Out\\\\\"\n",
+    "    if not os.path.exists(\"out\"):\n",
+    "        os.mkdir(\"out\")\n",
+    "    pathOut = root + \"\\out\\\\\"\n",
     "\n",
     "    vid = video_clip\n",
     "    cap = cv2.VideoCapture(vid)\n",
