--- a/training/training.ipynb
+++ b/training/training.ipynb
@@ -5,6 +5,7 @@
    "id": "f3a8d281",
    "metadata": {},
    "source": [
+    "Code abstracted from Jayesh Rohan Singh\n",
     "https://medium.com/swlh/emotion-detection-using-pytorch-4f6fbfd14b2e"
    ]
   },
@@ -14,170 +15,423 @@
    "id": "f425a082",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "import torchvision\n",
+    "import torch.nn as nn\n",
+    "import numpy as np\n",
+    "import torch.nn.functional as F\n",
+    "from torchvision.datasets import ImageFolder\n",
+    "from torch.utils.data import DataLoader\n",
+    "import torchvision.transforms as tt\n",
+    "from torchvision.utils import make_grid\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "28acdfa6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "root = os.getcwd() +\"\\\\..\"\n",
+    "batch_size = 200\n",
+    "epochs = 24\n",
+    "max_lr = 0.008\n",
+    "grad_clip = 0.1\n",
+    "weight_decay = 1e-4\n",
+    "opt_func = torch.optim.Adam\n",
+    "gpu_avail = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8ea73cbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['fer2013.bib', 'fer2013.csv', 'README', 'train', 'validation']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Looking into the directory\n",
+    "# data_dir = './dataset'\n",
+    "data_dir = root + \"\\\\data\\\\archive\\\\fer2013\\\\\"\n",
+    "print(os.listdir(data_dir))\n",
+    "classes_train = os.listdir(data_dir + \"/train\")\n",
+    "classes_valid = os.listdir(data_dir + \"/validation\")\n",
+    "# print(f'Train Classes - {classes_train}')\n",
+    "# print(f'Validation Classes - {classes_valid}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "46ad74c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Data transforms (Gray Scaling & data augmentation)\n",
+    "train_tfms = tt.Compose([tt.Grayscale(num_output_channels=1),\n",
+    "                         tt.RandomHorizontalFlip(),\n",
+    "                         tt.RandomRotation(30),\n",
+    "                         tt.ToTensor()])\n",
+    "\n",
+    "valid_tfms = tt.Compose([tt.Grayscale(num_output_channels=1), tt.ToTensor()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4fd4265a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Emotion Detection datasets\n",
+    "train_ds = ImageFolder(data_dir + '/train', train_tfms)\n",
+    "valid_ds = ImageFolder(data_dir + '/validation', valid_tfms)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e87dd246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PyTorch data loaders\n",
+    "train_dl = DataLoader(train_ds, batch_size, shuffle=True, num_workers=3, pin_memory=True)\n",
+    "valid_dl = DataLoader(valid_ds, batch_size*2, num_workers=3, pin_memory=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c85064e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def show_batch(dl):\n",
+    "#     for images, labels in dl:\n",
+    "#         fig, ax = plt.subplots(figsize=(12, 12))\n",
+    "#         ax.set_xticks([]); ax.set_yticks([])\n",
+    "#         print(images[0].shape)\n",
+    "#         ax.imshow(make_grid(images[:64], nrow=8).permute(1, 2, 0))\n",
+    "#         break\n",
+    "# show_batch(train_dl)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ebe3b4eb",
+   "id": "91483494",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from cv2 import cv2\n",
-    "import os\n",
-    "root = os.getcwd()\n",
-    "# Generate image snippets\n",
-    "def snippet(video_clip,root):\n",
-    "    if not os.path.exists(\"Out\"):\n",
-    "        os.mkdir(\"Out\")\n",
-    "    pathOut = root + \"\\Out\\\\\"\n",
+    "def get_default_device():\n",
+    "    if torch.cuda.is_available():\n",
+    "        return torch.device('cuda')\n",
+    "    else:\n",
+    "        return torch.device('cpu')\n",
+    "    \n",
+    "def to_device(data, device):\n",
+    "    if isinstance(data, (list,tuple)):\n",
+    "        return [to_device(x, device) for x in data]\n",
+    "    return data.to(device, non_blocking=True)\n",
     "\n",
-    "    vid = video_clip\n",
-    "    cap = cv2.VideoCapture(vid)\n",
-    "    count = 0\n",
-    "    # counter += 1\n",
-    "    success = True\n",
-    "    while success:\n",
-    "        success, image = cap.read()\n",
-    "        # print('read a new frame:',success)\n",
-    "        if count % 20 == 0:\n",
-    "            cv2.imwrite(pathOut + 'frame%d.jpg'%count, image)\n",
-    "        count += 1\n",
-    "snippet(root + \"\\\\videos\\\\happy.mp4\", root)"
+    "class DeviceDataLoader():\n",
+    "    def __init__(self, dl, device):\n",
+    "        self.dl = dl\n",
+    "        self.device = device\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        for b in self.dl: \n",
+    "            yield to_device(b, self.device)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.dl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d490cf7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cpu')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "if gpu_avail:\n",
+    "    device = get_default_device() # should show type=\"cuda\"\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "60a61f82",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dl = DeviceDataLoader(train_dl, device)\n",
+    "valid_dl = DeviceDataLoader(valid_dl, device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "af6124d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy(outputs, labels):\n",
+    "    _, preds = torch.max(outputs, dim=1)\n",
+    "    return torch.tensor(torch.sum(preds == labels).item() / len(preds))\n",
+    "\n",
+    "class ImageClassificationBase(nn.Module):\n",
+    "    def training_step(self, batch):\n",
+    "        images, labels = batch \n",
+    "        out = self(images)\n",
+    "        loss = F.cross_entropy(out, labels)\n",
+    "        return loss\n",
+    "    \n",
+    "    def validation_step(self, batch):\n",
+    "        images, labels = batch \n",
+    "        out = self(images)\n",
+    "        loss = F.cross_entropy(out, labels)\n",
+    "        acc = accuracy(out, labels)\n",
+    "        return {'val_loss': loss.detach(), 'val_acc': acc}\n",
+    "        \n",
+    "    def validation_epoch_end(self, outputs):\n",
+    "        batch_losses = [x['val_loss'] for x in outputs]\n",
+    "        epoch_loss = torch.stack(batch_losses).mean()\n",
+    "        batch_accs = [x['val_acc'] for x in outputs]\n",
+    "        epoch_acc = torch.stack(batch_accs).mean()\n",
+    "        return {'val_loss': epoch_loss.item(), 'val_acc': epoch_acc.item()}\n",
+    "    \n",
+    "    def epoch_end(self, epoch, result):\n",
+    "        print(\"Epoch [{}], last_lr: {:.5f}, train_loss: {:.4f}, val_loss: {:.4f}, val_acc: {:.4f}\".format(\n",
+    "            epoch, result['lrs'][-1], result['train_loss'], result['val_loss'], result['val_acc']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d0ecad23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def conv_block(in_channels, out_channels, pool=False):\n",
+    "    layers = [nn.Conv2d(in_channels, out_channels, kernel_size=3, padding=1), \n",
+    "              nn.BatchNorm2d(out_channels), \n",
+    "              nn.ELU(inplace=True)]\n",
+    "    if pool: layers.append(nn.MaxPool2d(2))\n",
+    "    return nn.Sequential(*layers)\n",
+    "\n",
+    "class ResNet(ImageClassificationBase):\n",
+    "    def __init__(self, in_channels, num_classes):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.conv1 = conv_block(in_channels, 128)\n",
+    "        self.conv2 = conv_block(128, 128, pool=True)\n",
+    "        self.res1 = nn.Sequential(conv_block(128, 128), conv_block(128, 128))\n",
+    "        self.drop1 = nn.Dropout(0.5)\n",
+    "        \n",
+    "        self.conv3 = conv_block(128, 256)\n",
+    "        self.conv4 = conv_block(256, 256, pool=True)\n",
+    "        self.res2 = nn.Sequential(conv_block(256, 256), conv_block(256, 256))\n",
+    "        self.drop2 = nn.Dropout(0.5)\n",
+    "        \n",
+    "        self.conv5 = conv_block(256, 512)\n",
+    "        self.conv6 = conv_block(512, 512, pool=True)\n",
+    "        self.res3 = nn.Sequential(conv_block(512, 512), conv_block(512, 512))\n",
+    "        self.drop3 = nn.Dropout(0.5)\n",
+    "        \n",
+    "        self.classifier = nn.Sequential(nn.MaxPool2d(6), \n",
+    "                                        nn.Flatten(),\n",
+    "                                        nn.Linear(512, num_classes))\n",
+    "        \n",
+    "    def forward(self, xb):\n",
+    "        out = self.conv1(xb)\n",
+    "        out = self.conv2(out)\n",
+    "        out = self.res1(out) + out\n",
+    "        out = self.drop1(out)\n",
+    "        \n",
+    "        out = self.conv3(out)\n",
+    "        out = self.conv4(out)\n",
+    "        out = self.res2(out) + out\n",
+    "        out = self.drop2(out)\n",
+    "        \n",
+    "        out = self.conv5(out)\n",
+    "        out = self.conv6(out)\n",
+    "        out = self.res3(out) + out\n",
+    "        out = self.drop3(out)\n",
+    "        \n",
+    "        out = self.classifier(out)\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c41ec096",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = to_device(ResNet(1, len(classes_train)), device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "49821939",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@torch.no_grad()\n",
+    "def evaluate(model, val_loader):\n",
+    "    model.eval()\n",
+    "    outputs = [model.validation_step(batch) for batch in val_loader]\n",
+    "    return model.validation_epoch_end(outputs)\n",
+    "\n",
+    "def get_lr(optimizer):\n",
+    "    for param_group in optimizer.param_groups:\n",
+    "        return param_group['lr']\n",
+    "\n",
+    "def fit_one_cycle(epochs, max_lr, model, train_loader, val_loader, \n",
+    "                  weight_decay=0, grad_clip=None, opt_func=torch.optim.SGD):\n",
+    "    torch.cuda.empty_cache()\n",
+    "    history = []\n",
+    "    \n",
+    "    # Set up custom optimizer with weight decay\n",
+    "    optimizer = opt_func(model.parameters(), max_lr, weight_decay=weight_decay)\n",
+    "    # Set up one-cycle learning rate scheduler\n",
+    "    sched = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr, epochs=epochs, \n",
+    "                                                steps_per_epoch=len(train_loader))\n",
+    "    \n",
+    "    for epoch in range(epochs):\n",
+    "        # Training Phase \n",
+    "        model.train()\n",
+    "        train_losses = []\n",
+    "        lrs = []\n",
+    "        for batch in train_loader:\n",
+    "            loss = model.training_step(batch)\n",
+    "            train_losses.append(loss)\n",
+    "            loss.backward()\n",
+    "            \n",
+    "            # Gradient clipping\n",
+    "            if grad_clip: \n",
+    "                nn.utils.clip_grad_value_(model.parameters(), grad_clip)\n",
+    "            \n",
+    "            optimizer.step()\n",
+    "            optimizer.zero_grad()\n",
+    "            \n",
+    "            # Record & update learning rate\n",
+    "            lrs.append(get_lr(optimizer))\n",
+    "            sched.step()\n",
+    "        \n",
+    "        # Validation phase\n",
+    "        result = evaluate(model, val_loader)\n",
+    "        result['train_loss'] = torch.stack(train_losses).mean().item()\n",
+    "        result['lrs'] = lrs\n",
+    "        model.epoch_end(epoch, result)\n",
+    "        history.append(result)\n",
+    "    return history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1dea021f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'val_loss': 1.9422999620437622, 'val_acc': 0.17749999463558197}]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "history = [evaluate(model, valid_dl)]\n",
+    "history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4895fe9e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "history += fit_one_cycle(epochs, max_lr, model, train_dl, valid_dl, \n",
+    "                        grad_clip=grad_clip, weight_decay=weight_decay, opt_func=opt_func)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57361701",
+   "id": "765bb462",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
-    "# packages for audio recog\n",
-    "import speech_recognition as sr\n",
-    "from os import path\n",
-    "from pydub import AudioSegment\n",
-    "from termcolor import colored\n",
-    "import spacy\n",
-    "import re\n",
-    "from afinn import Afinn\n",
-    "import pandas as pd\n",
-    "import moviepy.editor as mp\n",
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "#########################################################################################################\n",
-    "#                                                                                                       #\n",
-    "#                                           FACIAL RECOG                                                #\n",
-    "#                                                                                                       #\n",
-    "#########################################################################################################\n",
-    "# Video snippet\n",
-    "from cv2 import cv2\n",
-    "import os\n",
-    "\n",
-    "def snippet(video_clip):\n",
-    "    if not os.path.exists(\"Out\"):\n",
-    "        os.mkdir(\"Out\")\n",
-    "    pathOut = os.getcwd() + \"\\Out\\\\\"\n",
-    "\n",
-    "    vid = video_clip\n",
-    "    cap = cv2.VideoCapture(vid)\n",
-    "    count = 0\n",
-    "    # counter += 1\n",
-    "    success = True\n",
-    "    while success:\n",
-    "        success, image = cap.read()\n",
-    "        # print('read a new frame:',success)\n",
-    "        if count % 15 == 0:\n",
-    "            cv2.imwrite(pathOut + 'frame%d.jpg'%count, image)\n",
-    "        count += 1\n",
-    "\n",
-    "# predicting using model\n",
-    "import numpy as np # linear algebra\n",
-    "import json\n",
-    "import os\n",
-    "import keras\n",
-    "from keras.models import Sequential,model_from_json\n",
-    "from keras.layers import Conv2D, MaxPooling2D, AveragePooling2D\n",
-    "from keras.layers import Dense, Activation, Dropout, Flatten\n",
-    "from keras.layers.normalization import BatchNormalization\n",
-    "from keras.preprocessing import image\n",
-    "\n",
-    "def my_model():\n",
-    "    model = Sequential()\n",
-    "    input_shape = (48,48,1)\n",
-    "    model.add(Conv2D(64, (5, 5), input_shape=input_shape, activation='relu', padding='same'))\n",
-    "    model.add(Conv2D(64, (5, 5), activation='relu', padding='same'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\n",
-    "    model.add(Conv2D(128, (5, 5), activation='relu', padding='same'))\n",
-    "    model.add(Conv2D(128, (5, 5), activation='relu', padding='same'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\n",
-    "    model.add(Conv2D(256, (3, 3), activation='relu', padding='same'))\n",
-    "    model.add(Conv2D(256, (3, 3), activation='relu', padding='same'))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(MaxPooling2D(pool_size=(2, 2)))\n",
-    "\n",
-    "    model.add(Flatten())\n",
-    "    model.add(Dense(128))\n",
-    "    model.add(BatchNormalization())\n",
-    "    model.add(Activation('relu'))\n",
-    "    model.add(Dropout(0.2))\n",
-    "    model.add(Dense(7))\n",
-    "    model.add(Activation('softmax'))\n",
-    "\n",
-    "    model.compile(loss='categorical_crossentropy', metrics=['accuracy'],optimizer='adam')\n",
-    "    return model\n",
-    "\n",
-    "def getData(filename):\n",
-    "    Y = []\n",
-    "    X = []\n",
-    "    first = True\n",
-    "    for line in open(filename):\n",
-    "        if first:\n",
-    "            first = False\n",
-    "        else:\n",
-    "            row = line.split(',')\n",
-    "            Y.append(int(row[0]))\n",
-    "            X.append([int(p) for p in row[1].split()])\n",
-    "\n",
-    "    X, Y = np.array(X) / 255.0, np.array(Y)\n",
-    "    return X, Y\n",
-    "\n",
-    "def facial_main(video_clip):\n",
-    "    snippet(video_clip)\n",
-    "    model=my_model()\n",
-    "    objects = ('angry', 'disgust', 'fear', 'happy', 'sad', 'surprise', 'neutral')\n",
-    "    y_pos = np.arange(len(objects))\n",
-    "    model = keras.models.load_model('model_1.h5')\n",
-    "\n",
-    "    results = []\n",
-    "    directory = os.getcwd() + \"\\Out\"\n",
-    "\n",
-    "    snips = os.listdir(directory)\n",
-    "    for pic in snips:\n",
-    "        img = image.load_img(directory + \"\\\\\" + pic, grayscale=True, target_size=(48, 48))\n",
-    "        x = image.img_to_array(img)\n",
-    "        x = np.expand_dims(x, axis = 0)\n",
-    "        x /= 255\n",
-    "\n",
-    "        custom = model.predict(x)\n",
-    "        results.append(custom[0])\n",
-    "\n",
-    "    res = [0,0,0,0,0,0,0]\n",
-    "    for i in range(len(results)):\n",
-    "        for j in range(len(results[i])):\n",
-    "            res[j] += results[i][j]\n",
-    "\n",
-    "    out = []\n",
-    "    for i in range(len(objects)):\n",
-    "        out.append([objects[i],res[i]])\n",
-    "    return json.dumps(out)\n"
+    "def plot_accuracies(history):\n",
+    "    accuracies = [x['val_acc'] for x in history]\n",
+    "    plt.plot(accuracies, '-x')\n",
+    "    plt.xlabel('epoch')\n",
+    "    plt.ylabel('accuracy')\n",
+    "    plt.title('Accuracy vs. No. of epochs')\n",
+    "plot_accuracies(history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7718b775",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_lrs(history):\n",
+    "    lrs = np.concatenate([x.get('lrs', []) for x in history])\n",
+    "    plt.plot(lrs)\n",
+    "    plt.xlabel('Batch no.')\n",
+    "    plt.ylabel('Learning rate')\n",
+    "    plt.title('Learning Rate vs. Batch no.');\n",
+    "plot_lrs(history)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dd3dcd5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), root + '.\\\\models\\\\emotion_detection_model_state.pth')"
    ]
   }
  ],
